syntax = "proto3";

package proto;

import "staff.proto";

option go_package = ".;proto";

service StaffServiceV1 {
  rpc ListStaffV1(ListStaffV1Request) returns (ListStaffV1Response) {}
  rpc CreateStaffV1(CreateStaffV1Request) returns (CreateStaffV1Response) {}
  rpc GetStaffV1(GetStaffV1Request) returns (GetStaffV1Response) {}
  rpc PatchStaffV1(PatchStaffV1Request) returns (PatchStaffV1Response) {}
  rpc DeleteStaffV1(DeleteStaffV1Request) returns (DeleteStaffV1Response) {}
}

// list staff

message ListStaffV1Request {
  int32 offset = 1;
  int32 limit = 2;
}

message ListStaffV1Response {
  int32 code = 1;
  int32 sub_code = 2;
  string error_message = 3;
  int32 total = 4;
  repeated StaffV1 staff = 5;
}

// create staff

message CreateStaffV1Request {
  StaffV1 staff = 1;
}

message CreateStaffV1Response {
  int32 code = 1;
  int32 sub_code = 2;
  string error_message = 3;
  StaffV1 staff = 4;
}

// get staff

message GetStaffV1Request {
  string id = 1;
}

message GetStaffV1Response {
  int32 code = 1;
  int32 sub_code = 2;
  string error_message = 3;
  StaffV1 staff = 4;
}

// patch staff

message PatchStaffV1Request {
  string id = 1;
  string name = 2;
  string email = 3;
  string avatar_url = 4;
}

message PatchStaffV1Response {
  int32 code = 1;
  int32 sub_code = 2;
  string error_message = 3;
}

// delete staff

message DeleteStaffV1Request {
  string id = 1;
}

message DeleteStaffV1Response {
  int32 code = 1;
  int32 sub_code = 2;
  string error_message = 3;
}
